--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
     - npm build 
   post_build:
     commands:
-    - aws s3 sync ./dist s3://code43-s3-stack-s3bucket-1d8hdif1vfenc
+    - aws s3 sync ./dist/angular-tour-of-heroes s3://code43-s3-stack-s3bucket-1d8hdif1vfenc
 #artifacts:
   #files:
     # - location
