--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,18 +11,18 @@ version: 0.2
 phases:
   install:
     commands:
-    - npm install 
-    - npm install @angular/material 
+    - npm install
+    - npm install -g angular-cli
   #pre_build:
     #commands:
       # - command
       # - command
   build:
     commands:
-    - npm build 
+    - ng build 
   post_build:
     commands:
-    - aws s3 sync ./dist/angular-tour-of-heroes s3://code43-s3-stack-s3bucket-1d8hdif1vfenc
+    - aws s3 sync ./dist s3://code43-s3-stack-s3bucket-1d8hdif1vfenc
 #artifacts:
   #files:
     # - location
