--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,35 +1,45 @@
 version: 0.2
 
-#env:
-  #variables:
-     # key: "value"
-     # key: "value"
-  #parameter-store:
-     # key: "value"
-     # key: "value"
+env:
+    variables:
+        S3_BUCKET: "serverless-app-heroes-sl"
 
 phases:
-  install:
-    commands:
-    - npm install
-    - npm install -g @angular/cli
-   # - sudo apt-get update && apt-get clean && sudo npm install && sudo npm install -g @angular/cli
-  #pre_build:
-    #commands:
-      # - command
-      # - command
-  build:
-    commands:
-    - npm run ng build
-  post_build:
-    commands:
-    - aws s3 sync ./dist s3://serverless-app-heroes-sl
-#artifacts:
-  #files:
-    # - location
-    # - location
-  #discard-paths: yes
-  #base-directory: location
-#cache:
-  #paths:
-    # - paths
+    install:
+        commands:
+        - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+        - sudo apt-get install -y nodejs
+        - echo Installing source NPM dependencies...
+        # Need https driver.
+        - sudo apt-get update -y
+        - sudo apt-get install -y apt-transport-https
+        # Install Yarn.
+        - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+        - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+        - sudo apt-get update -y
+        - sudo apt-get install -y yarn
+        # Install Angular CLI
+        - yarn global add @angular/cli@1.7.0
+        # Install node dependancies.
+        - yarn install
+
+    build:
+        commands:
+        # Builds Angular application.
+        - echo Build started on `date`
+        - ng build
+
+    post_build:
+        commands:
+        # Clear S3 bucket.
+        - aws s3 rm s3://${S3_BUCKET} --recursive
+        - echo S3 bucket is cleared.
+        # Copy dist folder to S3 bucket
+        - aws s3 cp dist s3://${S3_BUCKET} --recursive
+        - echo Build completed on `date`
+
+artifacts:
+    files:
+        - '**/*'
+    discard-paths: yes
+    base-directory: 'dist*'
