--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "predeploy": "npm run build",
-    "deploy": "aws s3 sync build/ s3://sam-tutorial-dev-s3bucket-s64qw5dvivdx"
+    "predeploy": "npm run build"
   },
   "private": true,
   "dependencies": {
