--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
         commands:
         # Builds Angular application.
         - echo Build started on `date`
-        - ng build -dev
+        - ng build
 
     post_build:
         commands:
@@ -33,7 +33,7 @@ phases:
         - aws s3 rm s3://${S3_BUCKET} --recursive
         - echo S3 bucket is cleared.
         # Copy dist folder to S3 bucket
-        - aws s3 cp dist/angular-tour-of-heroes s3://${S3_BUCKET} --recursive
+        - aws s3 cp dist s3://${S3_BUCKET} --recursive
         - echo Build completed on `date`
 
 artifacts:
